# working-groups

./: LICENSE  README.md
edge/: README.md  onnx-edge-scenarios.md
edge/artifacts/: onnx-edge-scope-and-profile-definition.md  onnx-edge-wg-sow.md
edge/discussion_materials/: ONNX Edge Execution Profile Compliance.md  ONNX Edge scope and profile definition.md  ONNX Profile Topology Mapping Proposal  ONNX Stationary IoT device with AV profile (prototype).md  README.md  onnx-edge-scenarios.md  onnx-edge-scope and profile.md  onnx-edge-scope and profiling.md  onnx-profile-topology-map.md
edge/meetings/: 20190404.md  20190417.md  20190501.md  20190508.md  20190515.md  20190605.md  20190612.md  20190619.md  20190626.md  20190710.md  20190724.md  20190807.md  20190821.md  20190904.md  20190925.md  20191016.md  20191030.md  20191113.md  20191115.md  20191204.md  20191218.md  20200108.md
edge/proposals/: ONNX_edge_discussion.md
foundation/: LFAI-proposal.adoc  LFAI-proposal.md  README.md  foundation-options.md  whitepaper.md
generative-ai/: ReadMe.md
generative-ai/genai-interfaces/: CMakeLists.txt  README.md  genai_interfacesConfig.cmake.in
generative-ai/genai-interfaces/include/: pipeline_factory.hpp
generative-ai/genai-interfaces/include/pipelines/: data_types.hpp  device_factory.hpp  generation_config.hpp  pipeline_factory.hpp  text2image_pipeline.hpp  text2text_pipeline.hpp
generative-ai/genai-interfaces/samples/: .gitignore  README.md  buildOV.bat  buildOrt.bat  chat_sample.cpp
generative-ai/genai-interfaces/samples/text2image-pipeline/: .gitignore  CMakeLists.txt  README.md  buildOV.bat  text2image.cpp
generative-ai/genai-interfaces/samples/text2text-pipeline/: CMakeLists.txt  README.md  buildOV.bat  buildOrt.bat  chat_sample.cpp
generative-ai/meetings/: ReadMe.md  meeting_10_date_July_16.md  meeting_11_date_July_23.md  meeting_12_date_Aug_13.md  meeting_13_date_Aug_20.md  meeting_14_date_Aug_27.md  meeting_15_date_Sep_10.md  meeting_16_date_Sep_24.md  meeting_17_date_Oct_8.md  meeting_18_date_Oct_28.md  meeting_19_date_Nov_5.md  meeting_1_date_April_23.md  meeting_20_date_Nov_19.md  meeting_21_date_Dec_3.md  meeting_22_Jan_14_2026.md  meeting_23_Jan_28_2026.md  meeting_24_date_Feb_11_2026.md  meeting_25_date_Feb_25_2026.md  meeting_26_date_Mar_11_2026.md  meeting_27_date_May_6_2026.md  meeting_28_date_May_20_2026.md  meeting_29_date_Jun_3_2026.md  meeting_2_date_April_30.md  meeting_3_date_May_7.md  meeting_4_date_May_15.md  meeting_5_date_May_28.md  meeting_6_date_June_6.md  meeting_7_date_June_18.md  meeting_8_date_June_25.md  meeting_9_date_july_9.md  meeting_kickoff_date_April_17.md
multi-device/: README.md
multi-device/meetings/: README.md  notes-09-13-2023.md  notes-10-11-2023.md  notes-11-08-2023.md  notes-12-13-2023.md
preprocessing/: README.md
preprocessing/meetings/: 20210811.md  20211013.md  20211110.md  20211208.md  20220112.md  20220309.md  20220413.md  20220511.md  20220608.md  20220709.md  20220713.md  20221019.md  20221109.md  20230111.md  20230308.md  20230419.md  20230510.md  20230614.md  20230712.md  20231011.md  20231108.md  20240110.md
probabilistic-programming/: README.md  probabilistic-programming.md
probabilistic-programming/documents/: initial-onnx-splittable-prng-writeup-dec-2024.md  rng_proposal_july_06_2026.md
probabilistic-programming/meetings/: 001-20260220.md  002-20260306.md  003-20260320.md  004-20260403.md  005-20260417.md  006-20260501.md  007-20260515.md  008-20260529.md  009-20260612.md  009-20260626.md  010-20260710.md
release/docs/: onnx_release_verification.md
release/meetings/: 001-20200603.md  002-20200624.md  003-20200715.md  004-20200729.md  005-20200819.md  006-20200902.md  007-20200916.md  008-20200923.md  009-20200930.md  010-20201007.md  011-20201104.md  012-20201111.md
safety-related-profile/: README.md
safety-related-profile/attic/: team.md
safety-related-profile/deliverables/: README.md
safety-related-profile/documents/: README.md  issues.md  needs.md  peoples.md  reqs.md  sow.md  usecases.md
safety-related-profile/meetings/: 2024-06-26 - MEET-UP  2024-08-21.md  2024-09-04.md  General  README.md  agenda.md  general  minutes.md  presentation_proposals.md  presentations.md  team.md
training/: README.md
(+773 files in other folders)
